fixed the chat bubble overflow issue again

--- a/static/style.css
+++ b/static/style.css
@@ -53,6 +53,7 @@ input,textarea{
 }
 .chat-bubble{
     overflow: hidden;
+    scrollbar-width: none;
     position: relative;
     background-color: #182036;
     border-radius: 96px;
@@ -69,6 +70,8 @@ input,textarea{
     z-index: -1;
     border-radius: 96px;
     border-bottom-right-radius: 0px;
+    overflow: hidden;
+    scrollbar-width: none;
 }
 .chat-row{
     display: flex;
